add system selector

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
 <body>
 
+    <p>Choose system</p>
+    <select class="system">
+        <option value="koch_curve">Koch Curve</option>
+        <option value="sierpinski_triangle">Sierpinski Triangle</option></select>
+
 
     <script src="./p5.js"></script>
     <script src="./p5.dom.js"></script>
