add dragon curve system & only last string show

--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
     <p>Choose system</p>
     <select class="system">
         <option value="koch_curve">Koch Curve</option>
-        <option value="sierpinski_triangle">Sierpinski Triangle</option></select>
+        <option value="dragon_curve">DragonCurve</option>
+        <option value="sierpinski_triangle">Sierpinski Triangle</option>
+    </select>
 
 
     <script src="./p5.js"></script>
     <script src="./p5.dom.js"></script>
+    <script src="./jquery.min.js"></script>
     <script src="./sketch.js"></script>
 </body>
 
