--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <p>Choose system</p>
     <select class="system">
         <option value="koch_curve">Koch Curve</option>
-        <option value="dragon_curve">DragonCurve</option>
+        <option value="dragon_curve">Dragon Curve</option>
         <option value="sierpinski_triangle">Sierpinski Triangle</option>
+        <option selected value="fractal_plant">Fractal Plant</option>
     </select>
 
 
